--- a/src/SassyCSS/home.scss
+++ b/src/SassyCSS/home.scss
@@ -25,17 +25,24 @@
     margin-left: 10px;
 }
 
+// Dark button styling
+.btn.dark-btn {
+    background: #16a085;
+    color: #fff;
+}
+
 // Navbar styling
 nav {
     width: 100%;
     padding: 4px 0;
     position: fixed;
-    top: 1%;
+    top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 10;
+    color: #fff;
 
     // Navbar logo styling
     .nv-logo {
@@ -54,19 +61,19 @@ nav {
         cursor: pointer;
         font-weight: bolder;
     }
+}
 
-    // Dark navbar background styling for fixed state
-    .dark-nav {
-        background: #16a085;
-        transition: 0.5s;
-    }
+// Dark navbar background styling for fixed state
+.dark-nav {
+    background: #16a085;
+    transition: 0.5s;
 }
 
 // Hero section styling
 .hero-lp {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(45deg, rgba(0, 128, 128, 0.8), rgba(222, 184, 135, 0.8)), url('../Assets/system-with-chair.jpg');
+    background: linear-gradient(45deg, rgba(0, 128, 128, 0.8), rgba(222, 184, 135, 0.7)), url('../Assets/system-with-chair.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -90,5 +97,141 @@ nav {
             margin: 10px auto 20px;
             line-height: 1.4;
         }
+    }
+}
+
+// About section styling
+.aboutuslp {
+    margin: 100px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+
+    .about-left {
+        flex-basis: 40%;
+        position: relative;
+
+        .about-img {
+            width: 100%;
+            border-radius: 10px;
+        }
+    }
+
+    .about-right {
+        flex-basis: 56%;
+    }
+
+    h3 {
+        font-size: 16px;
+        font-weight: 600;
+        color: #16a085;
+    }
+
+    h2 {
+        font-size: 35px;
+        color: #16a085;
+        margin: 10px 0;
+        max-width: 400px;
+    }
+
+    p {
+        color: #676767;
+        margin-bottom: 15px;
+    }
+}
+
+// Title section styling
+.title {
+    text-align: center;
+    color: #16a085;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 70px 30px;
+
+    h2 {
+        font-size: 32px;
+        color: #16a085;
+        margin-top: 5px;
+        text-transform: none;
+    }
+}
+
+// Contacts section styling
+.contactlp {
+    margin: 80px auto;
+    max-width: 90%;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+
+    .contact-col {
+        flex-basis: 48%;
+        color: #676767;
+
+        span {
+            display: block;
+            margin: 20px 0;
+        }
+
+        h3 {
+            color: #000e38;
+            font-weight: 500;
+            font-size: 25px;
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+
+            img {
+                width: 35px;
+                margin-left: 10px;
+            }
+        }
+
+        p {
+            max-width: 450px;
+            list-style: 0.3;
+        }
+
+        ul li {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+
+            img {
+                width: 25px;
+                margin-right: 10px;
+            }
+        }
+    }
+}
+
+.contactlp form input,
+.contactlp form textarea {
+    display: block;
+    width: 100%;
+    background: #ebecfe;
+    padding: 15px;
+    border: 0;
+    outline: 0;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    resize: none;
+}
+
+// Footer section styling
+.footer {
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #797979;
+    padding: 15px 0;
+
+    ul li {
+        list-style: none;
+        display: inline-block;
+        margin-left: 20px;
     }
 }
