--- a/src/SassyCSS/home.scss
+++ b/src/SassyCSS/home.scss
@@ -89,13 +89,15 @@ nav {
         h1 {
             font-size: 60px;
             font-weight: 600;
+            color: #fff;
         }
 
         // Paragraph text styling
         p {
-            max-width: 700px;
+            max-width: 800px;
             margin: 10px auto 20px;
             line-height: 1.4;
+            color: #fff;
         }
     }
 }
