--- a/src/SassyCSS/home.scss
+++ b/src/SassyCSS/home.scss
@@ -73,7 +73,7 @@ nav {
 .hero-lp {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(45deg, rgba(0, 128, 128, 0.8), rgba(222, 184, 135, 0.7)), url('../Assets/system-with-chair.jpg');
+    background: linear-gradient(45deg, rgba(0, 128, 128, 0.8), rgba(222, 184, 135, 0.7)), url('../Assets/Img1.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
