--- a/src/SassyCSS/listofstudents.scss
+++ b/src/SassyCSS/listofstudents.scss
@@ -16,7 +16,7 @@
 
             .list-title {
                 font-weight: 600;
-                color: #6e49cb;
+                color: #16a085;
                 margin-bottom: 15px;
             }
         }
