--- a/src/SassyCSS/techsupport.scss
+++ b/src/SassyCSS/techsupport.scss
@@ -1,8 +1,8 @@
-.usercred {
+.techsupport {
     display: flex;
     width: 100%;
 
-    .usercredcontainer {
+    .techsupportcontainer {
         flex: 6;
 
         .listcontainer {
