--- a/src/SassyCSS/home.scss
+++ b/src/SassyCSS/home.scss
@@ -27,8 +27,9 @@
 
 // Dark button styling
 .btn.dark-btn {
-    background: #16a085;
-    color: #fff;
+    background: linear-gradient(135deg, rgba(0, 0, 139, 0.5), rgba(0, 128, 128, 0.7));
+    color: rgba(255, 255, 255, 1);
+    /* White text */
 }
 
 // Navbar styling
@@ -42,7 +43,8 @@ nav {
     align-items: center;
     justify-content: space-between;
     z-index: 10;
-    color: #fff;
+    color: rgba(255, 255, 255, 1);
+    /* White text */
 
     // Navbar logo styling
     .nv-logo {
@@ -65,7 +67,7 @@ nav {
 
 // Dark navbar background styling for fixed state
 .dark-nav {
-    background: #16a085;
+    background: rgba(0, 0, 51, 1); /* Very Dark Blue */
     transition: 0.5s;
 }
 
@@ -73,8 +75,9 @@ nav {
 .hero-lp {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(45deg, rgba(0, 128, 128, 0.8), rgba(222, 184, 135, 0.7)), url('../Assets/Img1.jpg');
+    background: linear-gradient(135deg, rgba(0, 0, 139, 0.5), rgba(0, 128, 128, 0.7)), url('../Assets/joshua-reddekopp-SyYmXSDnJ54-unsplash.jpg');
     background-size: cover;
+    /* Ensures the background image covers the entire element */
     background-position: center;
     display: flex;
     align-items: center;
@@ -87,9 +90,11 @@ nav {
 
         // Main heading styling
         h1 {
+            padding-top: 35%;
             font-size: 60px;
             font-weight: 600;
-            color: #fff;
+            color: rgba(255, 255, 255, 1);
+            /* White text */
         }
 
         // Paragraph text styling
@@ -97,7 +102,8 @@ nav {
             max-width: 800px;
             margin: 10px auto 20px;
             line-height: 1.4;
-            color: #fff;
+            color: rgba(255, 255, 255, 1);
+            /* White text */
         }
     }
 }
@@ -127,12 +133,12 @@ nav {
     h3 {
         font-size: 16px;
         font-weight: 600;
-        color: #16a085;
+        color: rgba(0, 0, 139, 0.7);
     }
 
     h2 {
         font-size: 35px;
-        color: #16a085;
+        color: rgba(0, 0, 139, 0.7);
         margin: 10px 0;
         max-width: 400px;
     }
@@ -146,7 +152,7 @@ nav {
 // Title section styling
 .title {
     text-align: center;
-    color: #16a085;
+    color: rgba(0, 0, 139, 0.7);
     font-size: 15px;
     font-weight: 600;
     text-transform: uppercase;
@@ -154,7 +160,7 @@ nav {
 
     h2 {
         font-size: 32px;
-        color: #16a085;
+        color: rgba(0, 0, 139, 0.7);
         margin-top: 5px;
         text-transform: none;
     }
