--- a/src/SassyCSS/placementresults.scss
+++ b/src/SassyCSS/placementresults.scss
@@ -34,7 +34,7 @@
 
             .list-title {
                 font-weight: 600;
-                color: #16a085;
+                color: var(--secondary-color);
                 margin-bottom: 15px;
             }
         }
