--- a/src/SassyCSS/addnotification.scss
+++ b/src/SassyCSS/addnotification.scss
@@ -14,12 +14,9 @@
                 padding: 10px;
                 outline: 0;
                 border: 0;
-                color: darkgreen;
+                background: darkgreen;
+                color: white;
                 cursor: pointer;
-
-                &:hover {
-                    background: lightgreen;
-                }
             }
         }
 
@@ -34,7 +31,7 @@
 
             .list-title {
                 font-weight: 600;
-                color: #6e49cb;
+                color: var(--secondary-color);
                 margin-bottom: 15px;
             }
         }
