--- a/src/SassyCSS/msgentryform.scss
+++ b/src/SassyCSS/msgentryform.scss
@@ -12,7 +12,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
             h2 {
-                color: #6e49cb;
+                color: var(--secondary-color);
                 font-size: 20px;
                 margin-bottom: 20px;
             }
@@ -43,7 +43,7 @@
 
             button[type="submit"] {
                 padding: 10px 20px;
-                background-color: teal;
+                background-color: var(--secondary-color);
                 color: #fff;
                 border: none;
                 border-radius: 4px;
