--- a/src/SassyCSS/techsupport.scss
+++ b/src/SassyCSS/techsupport.scss
@@ -16,7 +16,7 @@
 
             .list-title {
                 font-weight: 600;
-                color: #16a085;
+                color: var(--secondary-color);
                 margin-bottom: 15px;
             }
         }
