--- a/src/SassyCSS/updateprofile.scss
+++ b/src/SassyCSS/updateprofile.scss
@@ -14,7 +14,7 @@
             display: flex;
 
             h1 {
-                color: #16a085;
+                color: var(--secondary-color);
                 font-size: 20px;
             }
 
