--- a/src/SassyCSS/viewprofile.scss
+++ b/src/SassyCSS/viewprofile.scss
@@ -14,12 +14,9 @@
                 padding: 10px;
                 outline: 0;
                 border: 0;
-                color: darkgreen;
+                background: darkgreen;
+                color: white;
                 cursor: pointer;
-
-                &:hover {
-                    background: lightgreen;
-                }
             }
         }
 
