--- a/src/SassyCSS/batchentryform.scss
+++ b/src/SassyCSS/batchentryform.scss
@@ -6,13 +6,10 @@
         flex: 6;
 
         .form-container {
-            background-color: rgb(230, 227, 227);
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
 
             h2 {
-                color: var(--secondary-color);
+                color: var(--primary-color);
                 font-size: 20px;
                 margin-bottom: 20px;
             }
@@ -43,7 +40,7 @@
 
             button[type="submit"] {
                 padding: 10px 20px;
-                background-color: var(--secondary-color);
+                background-color: var(--primary-color);
                 color: #fff;
                 border: none;
                 border-radius: 30px;
