--- a/src/SassyCSS/msgentryform.scss
+++ b/src/SassyCSS/msgentryform.scss
@@ -6,13 +6,10 @@
         flex: 6;
 
         .form-container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
 
             h2 {
-                color: var(--secondary-color);
+                color: var(--primary-color);
                 font-size: 20px;
                 margin-bottom: 20px;
             }
@@ -43,10 +40,10 @@
 
             button[type="submit"] {
                 padding: 10px 20px;
-                background-color: var(--secondary-color);
+                background-color: var(--primary-color);
                 color: #fff;
                 border: none;
-                border-radius: 4px;
+                border-radius: 30px;
                 cursor: pointer;
                 font-size: 16px;
             }
