--- a/src/SassyCSS/updateprofile.scss
+++ b/src/SassyCSS/updateprofile.scss
@@ -14,7 +14,7 @@
             display: flex;
 
             h1 {
-                color: var(--secondary-color);
+                color: var(--primary-color);
                 font-size: 20px;
             }
 
@@ -68,13 +68,13 @@
                     }
 
                     button {
-                        width: 150px;
+                        width: 140px;
                         padding: 10px;
                         border: none;
-                        background-color: teal;
+                        background-color: var(--primary-color);
                         color: white;
-                        font-size: 12px;
-                        font-weight: bold;
+                        font-size: 16px;
+                        font-weight: medium;
                         cursor: pointer;
                         margin-top: 10px;
                     }
