--- a/src/SassyCSS/viewprofile.scss
+++ b/src/SassyCSS/viewprofile.scss
@@ -14,8 +14,8 @@
                 padding: 10px;
                 outline: 0;
                 border: 0;
-                background: darkgreen;
-                color: white;
+                color: darkgreen;
+                background: lightgreen;
                 cursor: pointer;
             }
         }
@@ -43,7 +43,7 @@
             .right {
                 flex: 2;
                 padding: 20px;
-                background-color: white;
+                background-color: #f5f5f5;
                 border-radius: 10px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
                 display: flex;
@@ -66,15 +66,15 @@
                             width: 40%;
                         }
 
-                        a{
-                            width: 80%;
+                        a {
+                            width: 100%;
                             padding: 2px;
                             border-radius: 5px;
                             text-decoration: none;
                         }
 
                         span {
-                            width: 80%;
+                            width: 100%;
                             padding: 2px;
                             border: 0.5px solid #ccc;
                             border-radius: 5px;
