--- a/src/SassyCSS/home.scss
+++ b/src/SassyCSS/home.scss
@@ -71,7 +71,7 @@ nav {
 .hero-lp {
     width: 100%;
     min-height: 100vh;
-    background: var(--sidebar-bg-gradient), url('../Assets/joshua-reddekopp-SyYmXSDnJ54-unsplash.jpg');
+    background: var(--sidebar-bg-gradient), url('../Assets/home.jpg');
     background-size: cover;
     background-position: 0% 65%;
     display: flex;
