--- a/src/SassyCSS/batchentryform.scss
+++ b/src/SassyCSS/batchentryform.scss
@@ -24,7 +24,7 @@
                 }
 
                 input,
-                textarea {
+                textarea,select {
                     width: 100%;
                     padding: 10px;
                     border: 1px solid #ccc;
