--- a/src/SassyCSS/addnotification.scss
+++ b/src/SassyCSS/addnotification.scss
@@ -17,6 +17,15 @@
                 color: darkgreen;
                 background: lightgreen;
                 cursor: pointer;
+                transition: transform 80ms ease-in;
+
+                &:active {
+                    transform: scale(0.95);
+                }
+            
+                &:focus {
+                    outline: none;
+                }
             }
         }
 
