--- a/src/SassyCSS/msgentryform.scss
+++ b/src/SassyCSS/msgentryform.scss
@@ -46,6 +46,15 @@
                 border-radius: 30px;
                 cursor: pointer;
                 font-size: 16px;
+                transition: transform 80ms ease-in;
+
+                &:active {
+                    transform: scale(0.95);
+                }
+            
+                &:focus {
+                    outline: none;
+                }
             }
         }
     }
