--- a/src/SassyCSS/updateprofile.scss
+++ b/src/SassyCSS/updateprofile.scss
@@ -77,6 +77,15 @@
                         font-weight: medium;
                         cursor: pointer;
                         margin-top: 10px;
+                        transition: transform 80ms ease-in;
+
+                        &:active {
+                            transform: scale(0.95);
+                        }
+                    
+                        &:focus {
+                            outline: none;
+                        }
                     }
                 }
             }
